third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_complex_expression.exp

Diagnostics:
error: constraint `|()|_ has ..` incompatible with `integer`
  ┌─ tests/more-v1/parser/invalid_call_lhs_complex_expression.move:3:27
  │
3 │         (if (true) 5 else 0)();
  │                           ^

error: expected function of type `|(integer, integer)|_` but found `()`
  ┌─ tests/more-v1/parser/invalid_call_lhs_complex_expression.move:4:9
  │
4 │         (while (false) {})(0, 1);
  │         ^^^^^^^^^^^^^^^^^^
